@@ -1,5 +1,10 @@
 2005-10-31  Christopher Aillon  <caillon@redhat.com>
 
+	* src/krb5-auth-dialog.c: No need to pass around our GladeXML
+	since its a static global
+
+2005-10-31  Christopher Aillon  <caillon@redhat.com>
+
 	* src/krb5-auth-dialog.c: The dialog shouldn't have two labels
 	reading 'Password:' so make the primary one have better text.
 
